Working on dynamic pagination and DOM list updating.

--- a/index.html
+++ b/index.html
@@ -555,6 +555,6 @@
         </li>
       </ul>
     </div>
-    <script src="js/test.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
