Created animations; encapsulated functionality into functions; started working on page transitions.

--- a/index.html
+++ b/index.html
@@ -553,6 +553,97 @@
                    <span class="date">Joined 05/14/13</span>
            </div>
         </li>
+        <!-- Test Students -->
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/91.jpg">
+                <h3>eduard riedel</h3>
+                <span class="email">eduard.riedel@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 06/12/15</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/42.jpg">
+                <h3>geesken jekel</h3>
+                <span class="email">geesken.jekel@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 02/12/13</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/54.jpg">
+                <h3>dolores ryan</h3>
+                <span class="email">dolores.ryan@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 06/17/16</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/49.jpg">
+                <h3>steven rogers</h3>
+                <span class="email">steven.rogers@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 01/18/11</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/63.jpg">
+                <h3>virgulino silva</h3>
+                <span class="email">virgulino.silva@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 03/18/11</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/11.jpg">
+                <h3>lucile bertrand</h3>
+                <span class="email">lucile.bertrand@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 06/13/16</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/10.jpg">
+                <h3>elsa lahti</h3>
+                <span class="email">elsa.lahti@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 04/15/12</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/women/12.jpg">
+                <h3>soline leclercq</h3>
+                <span class="email">soline.leclercq@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 05/12/14</span>
+           </div>
+        </li>
+        <li class="student-item cf">
+            <div class="student-details">
+                <img class="avatar" src="https://randomuser.me/api/portraits/thumb/men/89.jpg">
+                <h3>henri kruse</h3>
+                <span class="email">henri.kruse@example.com</span>
+            </div>
+            <div class="joined-details">
+                   <span class="date">Joined 05/14/13</span>
+           </div>
+        </li>
       </ul>
     </div>
     <script src="js/script.js"></script>
